// This is file was generated by netdx on (2017-11-24 12:17:07 PM.
syntax = "proto3";
package Ndx.Decoders.Base;
message Tcp {
    // Source Port ('tcp_tcp_srcport')
     uint32 TcpSrcport = 1;

    // Destination Port ('tcp_tcp_dstport')
     uint32 TcpDstport = 2;

    // Stream index ('tcp_tcp_stream')
     uint32 TcpStream = 3;

    // Sequence number ('tcp_tcp_seq')
     uint32 TcpSeq = 4;

    // Next sequence number ('tcp_tcp_nxtseq')
     uint32 TcpNxtseq = 5;

    // Acknowledgment number ('tcp_tcp_ack')
     uint32 TcpAck = 6;

    // Header Length ('tcp_tcp_hdr_len')
     uint32 TcpHdrLen = 7;

    // Flags ('tcp_tcp_flags')
     uint32 TcpFlags = 8;

    // Reserved ('tcp_flags_tcp_flags_res')
     bool TcpFlagsRes = 9;

    // Nonce ('tcp_flags_tcp_flags_ns')
     bool TcpFlagsNs = 10;

    // Congestion Window Reduced (CWR) ('tcp_flags_tcp_flags_cwr')
     bool TcpFlagsCwr = 11;

    // ECN-Echo ('tcp_flags_tcp_flags_ecn')
     bool TcpFlagsEcn = 12;

    // Urgent ('tcp_flags_tcp_flags_urg')
     bool TcpFlagsUrg = 13;

    // Acknowledgment ('tcp_flags_tcp_flags_ack')
     bool TcpFlagsAck = 14;

    // Push ('tcp_flags_tcp_flags_push')
     bool TcpFlagsPush = 15;

    // Reset ('tcp_flags_tcp_flags_reset')
     bool TcpFlagsReset = 16;

    // Syn ('tcp_flags_tcp_flags_syn')
     bool TcpFlagsSyn = 17;

    // Fin ('tcp_flags_tcp_flags_fin')
     bool TcpFlagsFin = 18;

    // Calculated window size ('tcp_tcp_window_size')
     uint32 TcpWindowSize = 19;

    // Checksum ('tcp_tcp_checksum')
     uint32 TcpChecksum = 20;

    // Checksum Status ('tcp_checksum_tcp_checksum_status')
     uint32 TcpChecksumStatus = 21;

    // TCP Segment Len ('tcp_tcp_len')
     uint32 TcpLen = 22;

    // Urgent pointer ('tcp_tcp_urgent_pointer')
     uint32 TcpUrgentPointer = 23;

    // TCP payload ('tcp_tcp_payload')
     bytes TcpPayload = 24;

}
